# O-1-Engine

./: .gitignore  build  configure  distclean  meson.build  run
app/: main.c
include/o1/: engine.h  memory.h
include/o1/frontend/: display.h
include/o1/managers/: display_manager.h  memory_manager.h  signal_manager.h  time_manager.h
include/o1/signals/: signal.h
lib/GLAD/include/GLAD/: gl.h
lib/GLAD/src/: gl.c
src/: engine.c
src/frontend/: display.c
src/managers/: display_manager.c  signal_manager.c
